@@ -1,0 +1,1 @@
+# Dummy package inside the 'namespaced' namespace.
