@@ -4,6 +4,9 @@
 Unreleased
 ----------
 
+- Add support for "develop" packages which keep their ``*.egg-info`` in a
+  subdirectory.  See https://bugs.launchpad.net/pkginfo/+bug/919147.
+
 - Add support for "unpacked SDists" (thanks to Mike Lundy for the patch).
 
 1.0 (2013-05-05)
